--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world!
-    world
-    world
-    world
+    world 
+    업데이트 1
 </body>
 </html>
